[*][DEV]: add timeInDay() of TimeColumn; [*][DEV]: add getTimezoneOffset() of CalendarUtils;